# ty

./: .gitignore  CMakeLists.txt  ty.sln
cmake/: AddSubdirectories.cmake  CFlagOverrides.cmake  CXXFlagOverrides.cmake  CheckIncludeHeaders.cmake  CheckSymbolsExist.cmake  EnableFolder.cmake  EnableLTO.cmake  SIMDFlags.cmake  UseAnalyze.cmake  UseGTest.cmake  UseIWYU.cmake  UseLsbRelease.cmake  VariableNameForSymbol.cmake  WarningFlags.cmake
ty/: downloader.cpp  downloader.h  main.cpp  stdafx.cpp  stdafx.h  ty.qrc  ty.rc  ty.vcxproj  ty.vcxproj.filters  tywidget.cpp  tywidget.h  tywidget.ui
ty/GeneratedFiles/: qrc_ty.cpp  ui_tywidget.h
